# KustoQueryOptimizer

kusto_query_performance_optimization/: README.md  pyproject.toml
kusto_query_performance_optimization/src/kusto_query_performance_optimization/: crew.py  main.py
kusto_query_performance_optimization/src/kusto_query_performance_optimization/config/: agents.yaml  tasks.yaml
kusto_query_performance_optimization/src/kusto_query_performance_optimization/tools/: custom_tool.py
