[project]
name = "kusto_query_performance_optimization"
version = "0.1.0"
description = "kusto-query-performance-optimization using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
kusto_query_performance_optimization = "kusto_query_performance_optimization.main:run"
run_crew = "kusto_query_performance_optimization.main:run"
train = "kusto_query_performance_optimization.main:train"
replay = "kusto_query_performance_optimization.main:replay"
test = "kusto_query_performance_optimization.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
